tests/Jroc.Test262.Tests/built-ins/Error/JavaScript/prototype/S15.11.4_A1.js
assert(
  Object.prototype.isPrototypeOf(Error.prototype),
  'Object.prototype.isPrototypeOf(Error.prototype) must return true'
);

